# TradeMatchingEngine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/engine/: CommonTypes.h  MatchingEngine.cpp  MatchingEngine.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  Trade.cpp  Trade.h
src/utils/: Printer.h
